<resources>
    <string name="app_name">Busboy</string>

    <!-- buttons, edit/text views etc -->
    <string name="search_button_text">Search</string>
    <string name="stop_id_edit_text_hint">Enter your stop ID (ex 56669)</string>
    <string name="nearby_edit_text_hint">Search distance (in feet, default 1000)</string>
    <string name="nearby_edit_text_hint_updated">Displaying stops within %1$s feet</string>
    <string name="nearby_status_update">Getting lines for nearby stop %1$s</string>
    <string name="nearby_choose_on_map">Choose on map</string>
    <string name="map_you_are_here">You are here</string>

    <!-- dialogs -->
    <string name="dialog_no_location">It looks like you\'ve given busboy permission to see
        your location, but the location setting is turned off. To see nearby stops, please
        enable the location setting.</string>
    <string name="dialog_no_loc_positive">Enable Location</string>
    <string name="dialog_no_thanks">No Thanks</string>
    <string name="dialog_got_it">Got it</string>
    <string name="dialog_help">You can search for nearby stops if you\'ve granted busboy permission
        to view your location and have the location setting enabled. If you\'re already at your stop,
        you can find upcoming buses by entering your stop ID (found at the bottom of the sign) and
        pressing the search button.
        \n\nNearby:
        \nLong pressing a \'nearby\' stop will display a map of walking directions from your location
        to the stop, and short pressing will display a list of upcoming buses for that stop. By default,
        Busboy shows you all stops within 1000 feet of your location. You can specify any distance
        up to 5000 feet, or select a line from the drop-down menu to see only stops that serve that line.
        \n\nPredictions:
        \nShort pressing a bus prediction will display the current location of that bus on a map. Long
        pressing a prediction will show you detailed information about that bus (its license plate,
        VIN number, seating capacity etc). Clicking the heart button will add that stop to your
        favorites.
        \n\nFavorites:
        \nShort pressing an item on your favorites list will show you upcoming buses for that stop.
        \nLong pressing a favorite will allow you to delete a stop from your favorites.
        \n\nFor bug reports, feature requests or contributions, please visit github.com/taitsmith/busboy
        or send an email to thebus@busboy.dev</string>
    <string name="dialog_delete_stop">Do you want to delete this stop from your favorites list? You
        can always re-add it later.</string>
    <string name="dialog_delete_stop_yes">Delete stop</string>
    <string name="dialog_location_method">Use your current location (requires permission) or choose
        location on map?</string>
    <string name="dialog_choose_on_map">Choose on map</string>
    <string name="dialog_use_location">Use my location</string>

    <!-- strings for bus detail fragment -->
    <string name="bus_detail_header">Details for bus %1$s</string>
    <string name="bus_description">Description:\n%1$s</string>
    <string name="bus_vehicle_type_description">Type description:\n%1$s</string>
    <string name="bus_make">Make:\n%1$s</string>
    <string name="bus_serial">Serial number:\n%1$s</string>
    <string name="bus_license">Plate number:\n%1$s</string>
    <string name="bus_length">Length:\n%1$s feet</string>
    <string name="bus_propulsion">Powered by:\n%1$s</string>
    <string name="bus_wifi_ac">Has WiFi / AC: %1$s / %2$s</string>
    <string name="bus_limit_capacity">Capacity limit:\n%1$s</string>
    <string name="bus_has_ridden">Ridden before?:\n%1$s</string>

    <!-- snackbars (error related) -->
    <string name="snackbar_404">Looks like nothing was found, try expanding your range</string>
    <string name="snackbar_bad_input">Please enter a valid stop ID</string>
    <string name="snackbar_no_predictions">Looks like there\'s no info for this stop.</string>
    <string name="snackbar_null_bus_coords">Looks like there\'s no data for this bus</string>
    <string name="snackbar_location_disabled">The Nearby search function requires location to be enabled</string>
    <string name="snackbar_network_error">Looks like a network issue, try again shortly</string>
    <string name="snackbar_bad_distance">Please enter a distance between 500 and 5000 feet</string>
    <string name="snackbar_no_favorites">Looks like there\'s nothing here…</string>
    <string name="snackbar_direction_failure">Looks like there was an issue getting directions</string>
    <string name="snackbar_no_waypoints">Looks like an error fetching route data</string>
    <string name="snackbar_no_service_scheduled">Looks like there\'s no service scheduled for this stop today</string>
    <string name="snackbar_unknown_error">Looks like something went wrong…</string>

    <!-- snackbars (informational) -->
    <string name="snackbar_favorite_added">Stop added to favorites</string>
    <string name="snackbar_favorite_deleted">Favorite deleted</string>
    <string name="snackbar_loc_null">Waiting on location, try again shortly</string>
    <string name="snackbar_map_long_press_drag">Long press the marker to drag to your location</string>
    <string name="snackbar_map_drop">Drop where you\'d like to search</string>
    <string name="snackbar_map_click_to_select">Click the marker to select this location</string>
    <plurals name="snackbar_service_alerts">
        <item quantity="one">There is %1$d service alert at this stop</item>
        <item quantity="other">There are %1$d service alerts at this stop</item>
    </plurals>

    <!-- tabs, menus etc-->
    <string name="tab_layout_by_stop">By ID</string>
    <string name="tab_layout_nearby">Nearby</string>
    <string name="tab_layout_help">Help</string>
    <string name="tab_layout_favorites">Favorites</string>
    <string name="tab_layout_settings">Settings</string>

    <!-- settings / transit system switching -->
    <string name="settings_transit_system">Transit system</string>
    <string name="settings_transit_system_desc">Choose which agency Busboy shows bus data for.</string>
    <string name="agency_ac_transit">AC Transit (Oakland)</string>
    <string name="agency_cta">CTA (Chicago)</string>
    <string name="snackbar_agency_switched">Now showing %1$s</string>
    <string name="settings_active_agency">Showing %1$s</string>

    <!-- strings for accessibility -->
    <string name="accessibility_busflag_img_desc">An image displaying a a picture of an AC Transit
        bus flag, with an arrow demonstrating where on the sign to find the stop ID information.</string>
    <string name="accessibility_favorites_fab">Image of a heart denoting add this stop to favorites</string>
    <string name="accessibility_reset_fab">Reset this screen to start a new search</string>
</resources>
